--- a/ProyectoInventarioWeb/Web.config
+++ b/ProyectoInventarioWeb/Web.config
@@ -58,6 +58,7 @@
   </system.codedom>
   <connectionStrings>
     <add name="BDInventarioEntities" connectionString="metadata=res://*/Models.InventarioDM.csdl|res://*/Models.InventarioDM.ssdl|res://*/Models.InventarioDM.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-O995B0B\SQLSERVER;initial catalog=BDInventario;persist security info=True;user id=Jhon;password=12345678;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="InventarioWebEntities" connectionString="metadata=res://*/Models.InventarioDM.csdl|res://*/Models.InventarioDM.ssdl|res://*/Models.InventarioDM.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=InventarioWeb.mssql.somee.com;initial catalog=InventarioWeb;persist security info=True;user id=Jhon99_SQLLogin_1;password=b4awkcpm1t;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
